--- a/vstyle.css
+++ b/vstyle.css
@@ -14,13 +14,13 @@ html {
 }
 
 div {
-	background-color: #F6CCDA;
+	background: -webkit-linear-gradient(top, #ffccf5 0%,#cdaaff 51%,#a8e3ff 100%);
 	font-family: monospace;
 	cursor: url(http://i.imgur.com/1tlkdT6.png), auto;
 }
 
 div div {
-    background-color: #F6CCDA;
+    background: -webkit-linear-gradient(top, #ffccf5 0%,#cdaaff 51%,#a8e3ff 100%);
 	font-family: monospace;
 	cursor: url(http://i.imgur.com/1tlkdT6.png), auto;
 }
