--- a/vstyle.css
+++ b/vstyle.css
@@ -20,7 +20,7 @@ div {
 	cursor: url(http://i.imgur.com/1tlkdT6.png), auto;
 }
 input {
-	background: -webkit-linear-gradient(top, #230854 15%,#9932CD 60%,#3066FF 100%);
+	background: -webkit-linear-gradient(top, #ffeafb 0%,#DD40Dd 51%,#d1f0ff 100%);
 	font-family: monospace;
 	cursor: url(http://i.imgur.com/1tlkdT6.png), auto;
 }
