--- a/vstyle.css
+++ b/vstyle.css
@@ -1,16 +1,5 @@
-h1 {
-	font-color:#DB70DB;
-	font-size: 130%;
-
-}
-
 div:hover {
 	background-color: #e8d9fa;
-}
-html {
-	font-color: #683A5E;
-	font-family: "Times New Roman", Helvetica;
-
 }
 
 div {
@@ -20,7 +9,7 @@ div {
 	cursor: url(http://i.imgur.com/1tlkdT6.png), auto;
 }
 input {
-	background: -webkit-linear-gradient(top, #ffeafb 0%,#DD40Dd 51%,#d1f0ff 100%);
+	background: -webkit-linear-gradient(top, #ffeafb 0%,#e3d1fd 51%,#d1f0ff 100%);
 	font-family: monospace;
 	cursor: url(http://i.imgur.com/1tlkdT6.png), auto;
 }
@@ -41,5 +30,7 @@ a:hover {
 	color: #9932CC;
 	cursor: url(https://i.imgur.com/wIKIV91.png), auto
 }
+
+
 
 
