--- a/vstyle.css
+++ b/vstyle.css
@@ -3,27 +3,29 @@ div:hover {
 }
 
 div {
+    color: #0ab978;
     border-radius: 10px;
-	background: -webkit-linear-gradient(top, #ffeafb 0%,#e3d1fd 51%,#d1f0ff 100%);
+	background: -webkit-linear-gradient(top, #ffe0ee 0%,#dfc8ff 51%,#d1f0ff 100%);
 	font-family: monospace;
 	cursor: url(http://i.imgur.com/1tlkdT6.png), auto;
 }
 input {
-	background: -webkit-linear-gradient(top, #ffeafb 0%,#e3d1fd 51%,#d1f0ff 100%);
+	background: -webkit-linear-gradient(top, #ffe0ee 0%,#dfc8ff 51%,#d1f0ff 100%);
 	font-family: monospace;
 	cursor: url(http://i.imgur.com/1tlkdT6.png), auto;
 }
 
 div div {
+    color: #0ab978;
     border-radius: 10px;
-    background: -webkit-linear-gradient(top, #ffeafb 0%,#e3d1fd 51%,#d1f0ff 100%);
+    background: -webkit-linear-gradient(top, #ffe0ee 0%,#dfc8ff 51%,#d1f0ff 100%);
 	font-family: monospace;
 	cursor: url(http://i.imgur.com/1tlkdT6.png), auto;
 }
 
 p {
     font-family: monospace;
-  	color: #00F49A;
+  	color: #0ab978;
 }  
 
 a:hover {
